--- a/{{cookiecutter.github_slug}}/tox.ini
+++ b/{{cookiecutter.github_slug}}/tox.ini
@@ -1,23 +1,13 @@
 [tox]
-envlist = py36, py37, py38, flake8
-
-[testenv:flake8]
-basepython = python
-deps = flake8
-commands = flake8 {{ cookiecutter.project_slug }} tests
+env_list = py3{9,10,11},lint
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}
-{% if cookiecutter.use_pytest == 'y' -%}
-deps =
-    -r{toxinidir}/requirements_dev.txt
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following line:
-;     -r{toxinidir}/requirements.txt
+groups = dev
+allowlist_externals = pytest
 commands =
-    pip install -U pip
-    pytest --basetemp={envtmpdir}
-{% else %}
-commands = python setup.py test
-{%- endif %}
+    pytest tests
+
+[testenv:lint]
+groups = lint
+commands =
+    flake8 {{ cookiecutter.project_slug }} tests
